# codestats

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE.md  README.md  a.txt  build.rs  claude.md  deny.toml  languages.json  languages.json5  languages.jsonc  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: check.yml  ci.yml  nightly.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  config_discovery.rs  init.rs  main.rs
crates/cli/tests/: fixture_counts.rs
crates/cli/tests/fixtures/8th/: basic.8th
crates/cli/tests/fixtures/ada/: basic.ada
crates/cli/tests/fixtures/alloy/: basic.als
crates/cli/tests/fixtures/bash/: shebang.sh
crates/cli/tests/fixtures/c/: basic.c
crates/cli/tests/fixtures/clojure/: basic.clj
crates/cli/tests/fixtures/csharp/: basic.cs
crates/cli/tests/fixtures/css/: basic.css
crates/cli/tests/fixtures/dart/: basic.dart
crates/cli/tests/fixtures/dockerfile/: Dockerfile
crates/cli/tests/fixtures/ejs/: basic.ejs
crates/cli/tests/fixtures/elixir/: basic.ex
crates/cli/tests/fixtures/elvish/: basic.elv
crates/cli/tests/fixtures/emacs_lisp/: basic.el
crates/cli/tests/fixtures/emberscript/: basic.em
crates/cli/tests/fixtures/expect/: basic.exp
crates/cli/tests/fixtures/fish/: basic.fish
crates/cli/tests/fixtures/fortran/: basic.f90
crates/cli/tests/fixtures/go/: basic.go  block_comments.go
crates/cli/tests/fixtures/groovy/: basic.groovy
crates/cli/tests/fixtures/html/: basic.html
crates/cli/tests/fixtures/ini/: basic.ini
crates/cli/tests/fixtures/javascript/: basic_node
crates/cli/tests/fixtures/kotlin/: nested_block_comments.kt
crates/cli/tests/fixtures/less/: basic.less
crates/cli/tests/fixtures/lua/: basic.lua
crates/cli/tests/fixtures/objective-c/: basic.m
crates/cli/tests/fixtures/openqasm/: basic.qasm
crates/cli/tests/fixtures/oz/: basic.oz
crates/cli/tests/fixtures/perl/: shebang
crates/cli/tests/fixtures/php/: basic.php
crates/cli/tests/fixtures/python/: shebang.py  shebang_spaced.py
crates/cli/tests/fixtures/r/: basic.R
crates/cli/tests/fixtures/ruby/: shebang
crates/cli/tests/fixtures/rust/: basic.rs
crates/cli/tests/fixtures/rust/subdir/: helper.rs
crates/cli/tests/fixtures/scheme/: basic.scm
crates/cli/tests/fixtures/solidity/: basic.sol
crates/cli/tests/fixtures/toml/: basic.toml
crates/cli/tests/fixtures/typescript/: basic.ts
crates/cli/tests/fixtures/zig/: basic.zig
crates/cli/tests/fixtures/zokrates/: basic.zok
crates/cli/tests/fixtures/zon/: basic.zon
crates/cli/tests/fixtures/zsh/: basic.zsh
crates/codestats/: Cargo.toml  languages.json5
crates/codestats/src/: config.rs  display.rs
crates/codestats/src/analysis/: analyzer.rs  file_io.rs  generated.rs
crates/codestats/src/display/: formatting.rs  human.rs  markdown.rs  options.rs  report.rs  separated_values.rs  template_filters.rs
crates/codestats/src/langs/: detection.rs
crates/codestats/src/langs/detection/: patterns.rs
crates/codestats/templates/: report.md
crates/web/: Cargo.toml
crates/web/src/: error.rs  git_source.rs  main.rs  zip_source.rs
crates/web/static/: index.html
docs/plans/: 2026-07-18-web-ui-design.md
src/: analysis.rs  analyzer.rs  cli.rs  comments.rs  completions.rs  config.rs  display.rs  filters.rs  init.rs  langs.rs  languages.json  lib.rs  main.rs  stats.rs  utils.rs
src/analysis/: analyzer.rs  config.rs  encoding.rs  file_io.rs  file_processor.rs  generated.rs  line_classifier.rs  line_counter.rs  mod.rs  pipeline.rs  stats.rs
src/display/: csv.rs  formatting.rs  html.rs  human.rs  json.rs  json_compact.rs  markdown.rs  mod.rs  options.rs  report.rs  separated_values.rs  template_filters.rs  tsv.rs
src/display/templates/: report.html
src/langs/: data.rs  detection.rs  globset.rs  matchers.rs  mod.rs  printer.rs  template.rs
src/langs/detection/: patterns.rs  scoring.rs
src/language/: detection.rs  mod.rs
templates/: report.html  report.md
tests/: fixture_counts.rs
tests/fixtures/8th/: basic.8th  nested_blocks.8th
tests/fixtures/abap/: basic.abap
tests/fixtures/abnf/: basic.abnf
tests/fixtures/actionscript/: basic.actionscript  basic.as
tests/fixtures/ada/: basic.ada
tests/fixtures/agda/: basic.agda
tests/fixtures/aiken/: basic.ak
tests/fixtures/assembly/: basic.asm
tests/fixtures/bash/: shebang.sh
tests/fixtures/c/: basic.c
tests/fixtures/c++/: basic.cpp
tests/fixtures/clojure/: basic.clj
tests/fixtures/cmake/: CMakeLists.txt
tests/fixtures/crystal/: basic.cr
tests/fixtures/csharp/: basic.cs
tests/fixtures/elm/: basic.elm
tests/fixtures/erlang/: basic.erl
tests/fixtures/euphoria/: basic.e
tests/fixtures/factor/: basic.factor
tests/fixtures/fsharp/: basic.fs
tests/fixtures/gdscript/: basic.gd
tests/fixtures/glsl/: basic.glsl
tests/fixtures/go/: basic.go  tab_indented.go
tests/fixtures/graphql/: basic.graphql
tests/fixtures/haskell/: basic.hs
tests/fixtures/hcl/: basic.tf
tests/fixtures/java/: Hello.java
tests/fixtures/javascript/: basic.js  basic_node  block_comments.js
tests/fixtures/julia/: basic.jl
tests/fixtures/kotlin/: basic.kt
tests/fixtures/lua/: basic.lua
tests/fixtures/makefile/: Makefile
tests/fixtures/markdown/: basic.md
tests/fixtures/nim/: basic.nim
tests/fixtures/nix/: basic.nix
tests/fixtures/ocaml/: basic.ml
tests/fixtures/opencl/: basic.cl
tests/fixtures/openscad/: basic.scad
tests/fixtures/pascal/: basic.pas
tests/fixtures/perl/: shebang
tests/fixtures/php/: basic.php
tests/fixtures/powershell/: basic.ps1
tests/fixtures/protobuf/: basic.proto
tests/fixtures/python/: basic.py  shebang.py  tab_indented.py
tests/fixtures/racket/: basic.rkt
tests/fixtures/ruby/: shebang
tests/fixtures/rust/: block_comments.rs  trailing_newline.rs
tests/fixtures/scala/: basic.scala
tests/fixtures/scss/: basic.scss
tests/fixtures/sql/: basic.sql
tests/fixtures/swift/: basic.swift
tests/fixtures/typescript/: basic.ts  component.tsx  interface.ts
tests/fixtures/yaml/: basic.yaml
wix/: main.wxs
(+3 files in other folders)
