[package]
name = "codestats"
version = "0.5.0"
authors = ["Quin Gillespie <trypsynth@gmail.com>"]
edition = "2024"
description = "A CLI tool for analyzing code statistics across different programming languages"
readme = "README.md"
repository = "https://github.com/trypsynth/codestats"
license = "MIT"
keywords = ["code", "analysis", "cli", "tool"]
categories = ["command-line-utilities", "development-tools", "filesystem"]
rust-version = "1.88.0"

[[bin]]
name = "cs"
path = "src/main.rs"

[features]
default = ["html", "markdown"]
html = ["dep:askama"]
markdown = ["dep:askama"]
all-formats = ["html", "markdown"]

[dependencies]
aho-corasick = "1.1.4"
anyhow = "1.0.100"
askama = { version = "0.15.1", optional = true }
clap = { version = "4.5.54", default-features = false, features = ["std", "derive", "help", "usage", "wrap_help"] }
clap_complete = "4.5.40"
encoding_rs = "0.8.35"
globset = "0.4.18"
ignore = "0.4.25"
memchr = "2.7.6"
memmap2 = "0.9.9"
num-format = { version = "0.4", default-features = false, features = ["std"] }
serde = { version = "1.0.228", default-features = false, features = ["std", "derive"] }
serde_json = { version = "1.0.149", default-features = false, features = ["std"] }
terminal_size = "0.4.3"
toml = "0.9"

[build-dependencies]
indexmap = { version = "2.12.1", features = ["serde"] }
json5 = "1.3.0"
serde = { version = "1.0.228", default-features = false, features = ["std", "derive"] }

[profile.release]
strip = true
opt-level = 3
lto = "fat"
panic = "abort"
codegen-units = 1
