[workspace]
resolver = "3"
members = ["crates/codestats", "crates/cli", "crates/web"]

[workspace.package]
version = "0.7.0"
authors = ["Quin Gillespie <trypsynth@gmail.com>"]
edition = "2024"
repository = "https://github.com/trypsynth/codestats"
license = "MIT"
rust-version = "1.88.0"

[workspace.dependencies]
aho-corasick = "1.1.4"
anyhow = "1.0.102"
askama = "0.16.0"
clap = { version = "4.6.2", default-features = false }
clap_complete = "4.6.5"
encoding_rs = "0.8.35"
globset = "0.4.18"
ignore = "0.4.26"
indexmap = { version = "2.14.0", features = ["serde"] }
json5 = "1.3.1"
memchr = "2.8.2"
memmap2 = "0.9.11"
num-format = { version = "0.4", default-features = false, features = ["std"] }
serde = { version = "1.0.228", default-features = false, features = ["std", "derive"] }
serde_json = { version = "1.0.150", default-features = false, features = ["std"] }
terminal_size = "0.4.4"
toml = "1.1.2"

[profile.release]
strip = true
opt-level = 3
lto = "fat"
panic = "abort"
codegen-units = 1
